--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
 				<a href="#">About</a>
 				<ul class="dl-submenu">
 					<li>
-						<img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
+						<img src="{{ site.baseurl }}/assets/img/phillippa.png" alt="{{ site.title }} photo" class="phills-photo">
 						<h4>{{ site.title }}</h4>
 						<p>{{ site.description }}</p>
 					</li>
