--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -126,6 +126,10 @@ img {
 .author-photo {
     background-color: $white;
 }
+.phills-photo {
+    -webkit-filter: grayscale(0.6) contrast(1.3) saturate(1) drop-shadow(3px 2px 2.32px #BFBFBF);
+    filter: grayscale(0.6) contrast(1.3) saturate(1) drop-shadow(3px 2px 2.32px #BFBFBF);
+}
 .image-right {
     float: right;
     margin-left: 1em;
