--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,6 +38,7 @@
     <!-- JS -->
     <script src="{{ site.baseurl }}/assets/js/modernizr-3.3.1.custom.min.js"></script>
     <!-- Favicons -->
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
     <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/assets/img/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/assets/img/favicons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/assets/img/favicons/apple-icon-72x72.png">
